# crittershowdown

./: .gitignore  Cargo.toml  README.md  TODO.md  deploy-itch.sh  deploy-web.sh  frpc.ini  make-mac-icons.sh
generate/: Cargo.toml
generate/src/: main.rs
html/: game.html  index.html  itch.html
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  lobby.rs  net.rs  vecmap.rs
shared/src/logic/: bug.rs  game.rs  mod.rs  physics.rs  prop.rs  team.rs  turn.rs
shared/tests/: position.rs
src/: draw.rs  lib.rs  net.rs
src/app/: app.rs  audio.rs  mod.rs  particle.rs  pointer.rs  ui.rs
src/app/state/: editor.rs  editor_preview.rs  game.rs  menu_arena.rs  menu_main.rs  menu_settings.rs  menu_skirmish.rs  menu_teleport.rs  mod.rs  state.rs  tutorial.rs
static/css/: crittershowdown.css  maginet.css
static/js/: load.js
static/png/: appicon.icns
