[package]
name = "crittershowdown"
version = "0.1.0"
edition = "2021"
description = "Maginet is a multiplayer turn-based tactics game built in Rust and compiled to WebAssembly."
repository = "https://github.com/evrimoztamur/crittershowdown/"

[workspace]
members = ["server", "shared", "generate"]

[features]
deploy = []
demo = []

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.26"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
shared = { path = "shared" }
serde_json = "1.0.94"
console_error_panic_hook = "0.1.7"
rapier2d = { version = "*", features = ["enhanced-determinism", "serde-serialize"] }
nalgebra = "0.32.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'console',
    'Document',
    'DomRect',
    'DomStringMap',
    'Element',
    'FocusEvent',
    'HtmlDocument',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlAudioElement',
    'HtmlMediaElement',
    'AudioContext',
    'AudioBuffer',
    'AudioNode',
    'GainNode',
    'AudioParam',
    'AudioDestinationNode',
    'AudioBufferSourceNode',
    'KeyboardEvent',
    'Location',
    'Node',
    'MouseEvent',
    'Performance',
    'Touch',
    'TouchEvent',
    'TouchList',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Storage',
    'Window',
]
