[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10" }
serde = { version = "1.0.160", features = ["derive", "rc"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
shared = { path = "../shared", features = ["server"] }
serde_json = "1.0.94"
mime = "0.3.16"
rand = "0.8.5"
tower = "0.4.13"
